fix overflow

--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -1,3 +1,8 @@
+html {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+}
 html,
 body {
   width: 100%;
